# ex-GPT

./: .clinerules.md  .env  .env.enterprise  .env.example  .env.langgraph  .env.offline  .env.template  .gitattributes  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  FILE_LIST.md  LICENSE  OFFLINE_INSTALL.md  OPENSOURCE_LLM_SETUP.md  RAGFLOW_INTEGRATION_GUIDE.md  RAGFLOW_LLM_SETUP.md  README.md  README_CPU_TEST.md  SETUP_GUIDE.md  admin_dashboard copy.html  admin_dashboard.html  app.py  check_api_keys.bat  check_offline_system.bat  check_ollama.bat  check_opensource_llm.bat  docker-compose-api-server.yaml  docker-compose-db-only.yaml  docker-compose-gpu-alternatives.yaml  docker-compose-model-server.yaml  docker-compose-ragflow.yaml  docker-compose.enterprise.yml  docker-compose.yaml  docker-compose.yml  download_florence.py  download_scout_maverick.py  index copy 2.html  index copy 3.html  (+45 more)
.claude/: settings.local.json
.clinerules/: 01-ex-gpt-core.md  02-ai-ml-standards.md  03-korean-expressway.md  04-datastreams-neoali.md
ai/: model_manager.py
app/: __init__.py
backup-original/: admin_dashboard.html  analysis.html  florence_test.py  quick_login.py
backup-original/css/: style.css
backup-original/js/: main.js
clinerules-bank/clients/: government-sector.md  korea-expressway.md
clinerules-bank/frameworks/: flask-ai.md  poetry-deps.md  qdrant-vector.md  whisper-stt.md
clinerules-bank/hardware/: cuda-management.md  h100-gpu.md
css/: style.css
docs/korean/: Shell_Integration_해결방법.md
exgpt_auth/: __init__.py  admin.py  database.py  logging_utils.py  models.py  permission_service.py  permissions.py  rag_filter.py  schemas.py
js/: main.js
korean_expressway/greetings/: menu_greetings.py
qdrant_storage/: raft_state.json
qdrant_storage/collections/documents/0/: replica_state.json
qdrant_storage/collections/documents/0/segments/59809074-621e-43a9-8e79-581dc6cbd51d/payload_index/: IDENTITY  LOG  MANIFEST-000005  MANIFEST-000009
qdrant_storage/collections/documents/0/segments/689a705f-93b2-46bd-b177-a0031a68f33f/payload_index/: IDENTITY  LOG  MANIFEST-000005  MANIFEST-000009
qdrant_storage/collections/documents/0/segments/6cf0aea5-6fd8-40b8-893e-de2c355ad272/payload_index/: IDENTITY  LOG  MANIFEST-000005  MANIFEST-000009
qdrant_storage/collections/documents/0/segments/6e8f4335-da6d-4bde-a720-d93acd9b22d1/payload_index/: IDENTITY  LOG  MANIFEST-000005  MANIFEST-000009
qdrant_storage/collections/documents/0/segments/729f6dc1-67a2-4d93-9e48-d070e50117cd/payload_index/: IDENTITY  LOG  MANIFEST-000005  MANIFEST-000009
qdrant_storage/collections/documents/0/segments/7cb5bf27-90ed-4230-8e9f-26844f524276/payload_index/: IDENTITY  LOG  MANIFEST-000005  MANIFEST-000009
qdrant_storage/collections/documents/0/segments/dac27aaa-2425-4d16-aa1e-8f23229b5974/payload_index/: IDENTITY  LOG  MANIFEST-000005  MANIFEST-000009
qdrant_storage/collections/documents/0/segments/fcf7b1e8-95c2-4842-8ae5-da09d9885cd2/payload_index/: IDENTITY  LOG  MANIFEST-000005  MANIFEST-000009
ragflow_config/: service_conf.yaml
scripts/: windows-setup.ps1
security/: personal_data_detector.py
server/: server.js
src/: main.py
src/api/: chat.py
src/rag/: ragflow_integration.py
tests/: test_permissions.py
