[tool.poetry]
name = "ex-gpt-demo"
version = "0.1.0"
description = ""
authors = ["back2zion <back2zion@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.3"
flask = "^2.3.0"
flask-cors = "^4.0.0"

python-docx = "^1.1.2"
pymupdf = "^1.26.0"
olefile = "^0.47"
transformers = "^4.44.0"
tokenizers = "^0.19.1"
torch = {version = "^2.4.0+cu121", source = "pytorch"}
torchvision = {version = "^0.19.0+cu121", source = "pytorch"}
torchaudio = {version = "^2.4.0+cu121", source = "pytorch"}
pillow = "^11.2.1"
einops = "^0.8.1"
timm = "^1.0.15"
faster-whisper = "^1.0.0"  # 더 빠르고 호환성 좋음
accelerate = "^1.2.0"
noisereduce = "^3.0.0"
# 오디오 처리 라이브러리 (문제없이 설치 가능)
pydub = "^0.25.1"
librosa = "^0.10.1" 
soundfile = "^0.13.1"
noisereduce = "^3.0.0"
webrtcvad = "^2.0.10"         # 음성 구간 감지

pytesseract = "^0.3.13"
# 기존 종속성들
requests = "^2.31.0"
sentence-transformers = "^2.2.2"
qdrant-client = "^1.7.0"
werkzeug = "^2.3.0"
numpy = "^1.24.0"
tqdm = "^4.66.0"
psutil = "^5.9.0"
[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false