[tool.poetry]
name = "ex-gpt"
version = "1.0.0"
description = "ex-GPT Enterprise AI Assistant Platform"
authors = ["ex-GPT Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
# 웹 프레임워크
flask = "^3.0.0"
flask-cors = "^4.0.0"
# LangGraph 및 LangChain
langgraph = "^0.2.20"
langchain = "^0.2.16"
langchain-core = "^0.2.38"
langchain-community = "^0.2.16"
langchain-openai = "^0.1.23"
langchain-anthropic = "^0.1.23"
# LLM 서버 통신
openai = "^1.51.0"
anthropic = "^0.34.2"
# RAG 및 벡터 DB
qdrant-client = "^1.11.3"
sentence-transformers = "^3.1.1"
# 문서 처리
pypdf2 = "^3.0.1"
python-docx = "^1.1.0"
python-pptx = "^0.6.23"
openpyxl = "^3.1.2"
# 엔터프라이즈 기능
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
pyjwt = "^2.9.0"
bcrypt = "^4.2.0"
python-dotenv = "^1.0.1"
# 모니터링 및 로깅
loguru = "^0.7.2"
prometheus-client = "^0.21.0"
# 유틸리티
requests = "^2.32.3"
httpx = "^0.27.2"
aiofiles = "^24.1.0"
python-multipart = "^0.0.12"
pyyaml = "^6.0.2"
click = "^8.1.7"
rich = "^13.8.1"
# RAGFlow integration (optional)
ragflow-sdk = {version = "^0.19.1", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.13.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
pre-commit = "^3.6.0"

[tool.poetry.group.test.dependencies]
httpx = "^0.25.2"
pytest-mock = "^3.12.0"
factory-boy = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing"
